# my-backend

./: .env  .pre-commit-config.yaml  Cargo.toml  backend.yaml  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
fixtures/: decoding.pem  encoding.pem  test.sql
migrations/: 20241128083929_user.sql  20241206123726_url.sql
src/: README.md  config.rs  error.rs  handler.rs  lib.rs  main.rs  model.rs  util.rs
src/handlers/: mod.rs  urls.rs  users.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs  url.rs  user.rs
