[package]
name = "my-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.9", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.10"
nanoid = "0.4.0"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
sqlx-db-tester = "0.5.0"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tower = { version = "0.5.1", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
